# flight-planning

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  aircraft.py  draw_envelope.py  flight_planning_domain.py  flightplanning_utils.py  pyproject.toml  test_bada4_jet_CR.py  vis.py
frontend/: 12ft.io  app.py  requirements.txt
notebooks/: 15_flightplanning_tuto.ipynb  README.md  requirements.txt
pybada/: __init__.py  bada4.py
pybada/data/A320-231/: A320-231.xml  ECON.OPT  OPTALT.OPT
pybada/data/A330-341/: A330-341.xml  ECON.OPT  OPTALT.OPT
pybada/data/A350-941/: A350-941.xml  ECON.OPT  OPTALT.OPT
pybada/data/A380-841/: A380-841.xml  ECON.OPT  OPTALT.OPT
src/flight_planning/: flight_planning_domain.py  flight_planning_domain.py_save  flightplanning_utils.py  solve.py
weather/: weather.py
