[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-planning"
description = ""
authors = [
    { name = "Guillaume Alleon", email="guillaume.alleon@gmail.com" },
]

requires-python = ">=3.8"

dependencies = [
    "Cartopy >= 0.21.1",
    "casadi >= 3.5.5",
    "cdsapi >= 0.5.1",
    "cfgrib >= 0.9.10.3",
    "openap >= 1.3",
    "python-dotenv >= 0.20.0",
    "pygeodesy >= 23.1.9",
    "scikit-decide[all] >= 0.9.4",
    "scikit-learn >= 1.2.1",
    "simplejson >= 3.18.1",
    "xarray >= 2023.1.0",
]

dynamic = ["version", "readme"]
#urls = [{source="https://github.com/galleon/flight-planning"}]

[tool.distutils.bdist_wheel]
universal = true

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "requests_mock"]

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}
readme = {file = "README.md"}

[tool.setuptools_scm]
local_scheme = 'no-local-version'
version_scheme = 'post-release'
